[package]
name = "arti-bench"
version = "0.1.0"
edition = "2018"
authors = ["The Tor Project, Inc.", "eta <eta@torproject.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "A simple benchmarking utility for Arti."
keywords = [ "tor", "arti" ]
categories = [ "asynchronous" ]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
clap = "2.33.0"
futures = "0.3.14"
float-ord = "0.3"
rand = "0.8"
anyhow = "1.0.23"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.50"
tracing = "0.1.18"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tokio = { version = "1.7", features = ["full"] }
tor-rtcompat = { path="../tor-rtcompat", version = "0.1.0", features = ["tokio", "native-tls"] }
arti = { path="../arti", version = "0.1.0"}
arti-config = { path="../arti-config", version = "0.1.0"}
arti-client = { package="arti-client", path = "../arti-client", version = "0.1.0"}
tokio-socks = "0.5"
