[package]
name = "arti-bench"
version = "0.8.3"
edition = "2021"
rust-version = "1.60"
authors = ["The Tor Project, Inc.", "eta <eta@torproject.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "A simple benchmarking utility for Arti."
keywords = ["tor", "arti"]
categories = ["asynchronous"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
anyhow = "1.0.23"
arti = { path = "../arti", version = "1.1.2" }
arti-client = { package = "arti-client", path = "../arti-client", version = "0.8.2" }
clap = "3.2.20"
float-ord = "0.3"
fs-mistrust = { path = "../fs-mistrust", version = "0.6.2" }
futures = "0.3.14"
rand = "0.8"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.50"
tokio = { version = "1.7", features = ["full"] }
tokio-socks = "0.5"
tor-config = { path = "../tor-config", version = "0.7.2" }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.8.1", features = ["tokio", "native-tls"] }
tracing = "0.1.18"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
