[package]
name = "arti-client"
version = "0.2.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Library for connecting to the Tor network as an anonymous client"
keywords = ["tor", "arti", "privacy", "anonymity", "networking"]
categories = ["network-programming", "cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = ["tokio", "native-tls"]
async-std = ["tor-rtcompat/async-std"]
tokio = ["tor-rtcompat/tokio", "tor-proto/tokio"]
native-tls = ["tor-rtcompat/native-tls"]
rustls = ["tor-rtcompat/rustls"]
static = ["static-sqlite", "static-native-tls"]
static-sqlite = ["tor-dirmgr/static"]
static-native-tls = ["tor-rtcompat/static", "native-tls"]

dirfilter = ["tor-dirmgr/dirfilter"]
error_detail = []

# Enable experimental APIs that are not yet officially supported.
#
# These APIs are not covered by semantic versioning.  Using this
# feature voids your "semver warrantee".
experimental-api = []

[dependencies]
tor-basic-utils = { path = "../tor-basic-utils", version = "0.2.0"}
tor-circmgr = { path = "../tor-circmgr", version = "0.2.0"}
tor-config = { path = "../tor-config", version = "0.2.0"}
tor-chanmgr = { path = "../tor-chanmgr", version = "0.2.0"}
tor-dirmgr = { path = "../tor-dirmgr", version = "0.2.0"}
tor-error = { path = "../tor-error", version = "0.2.0"}
tor-guardmgr = { path = "../tor-guardmgr", version = "0.2.0"}
tor-netdoc = { path = "../tor-netdoc", version = "0.2.0"}
tor-persist = { path = "../tor-persist", version = "0.2.0"}
tor-proto = { path = "../tor-proto", version = "0.2.0"}
tor-rtcompat = { path = "../tor-rtcompat", version = "0.2.0"}

humantime-serde = "1.1.1"
derive_builder = "0.11.2"
derive_more = "0.99"
directories = "4"
educe = "0.4.6"
futures = "0.3.14"
postage = { version = "0.4", default-features = false, features = ["futures-traits"] }
tracing = "0.1.18"
serde = { version = "1.0.103", features = ["derive"] }
thiserror = "1"
pin-project = "1"

[dev-dependencies]
tor-rtcompat = { path = "../tor-rtcompat", version = "0.2.0", features = ["tokio", "native-tls"] }
tokio-crate = { package = "tokio", version = "1.7", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
    "macros",
] }
pin-project = "1"
tokio-util = { version = "0.7.0", features = ["compat"] }
anyhow = "1.0.23"
tracing-subscriber = "0.3.0"
tempfile = "3.3"
once_cell = "1.9"
