[package]
name = "arti-config"
version = "0.3.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "High-level configuration for the Arti Tor implementation"
keywords = ["tor", "arti"]
categories = ["config"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
