[package]
name = "arti-config"
version = "0.17.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Removed crate.  (Tools for configuration management in Arti)"
keywords = ["tor", "arti"]
categories = ["config"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
publish = false
[package.metadata.docs.rs]
all-features = true

[dependencies]

[features]
full = []
