[package]
name = "arti-hyper"
version = "0.9.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Adapter for making anonymous http requests using the Tor network and hyper"
keywords = ["tor", "arti", "privacy", "anonymity", "hyper"]
categories = ["network-programming", "cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = ["native-tls"]
native-tls = ["arti-client/native-tls", "tor-rtcompat/native-tls"]
rustls = ["arti-client/rustls", "tor-rtcompat/rustls"]
static = ["arti-client/static"]

# Enable experimental APIs that are not yet officially supported.
#
# These APIs are not covered by semantic versioning.  Using this
# feature voids your "semver warrantee".
experimental-api = []
full = ["arti-client/full", "tor-error/full", "tor-rtcompat/full"]

[dependencies]
anyhow = "1.0.23"
arti-client = { path = "../arti-client", version = "0.9.0" }
educe = "0.4.6"
hyper = { version = "0.14", features = ["http1", "client", "runtime"] }
pin-project = "1"
thiserror = "1"
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
tokio = { package = "tokio", version = "1.7", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
    "macros",
] }
tor-error = { path = "../tor-error", version = "0.5.0" }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.9.0", features = ["tokio"] }

[target.'cfg(target_vendor="apple")'.dev-dependencies]
tls-api-openssl = "0.9.0"

[dev-dependencies]
tracing-subscriber = "0.3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
